--- a/newsletters/05-may-2015.md
+++ b/newsletters/05-may-2015.md
@@ -8,14 +8,14 @@ I won Camp NaNoWriMo with 50k, 4 finished short stories (1st drafts),
 the beginning outline of something larger, and two more stories. I've
 written and posted interviews with every main character except for two:
 
-* [Helga Yngvesdotter](/characters/helga-yngvesdotter)--an orphan seeking power
+* [Helga Yngvesdotter](http://smaty.se/characters/helga-yngvesdotter)--an orphan seeking power
 against the religious fanatics who slayed her father
-* [Linda Wijk](/characters/linda-wijk)--mathematically inclined student has to
+* [Linda Wijk](http://smaty.se/characters/linda-wijk)--mathematically inclined student has to
     overcome her fear of snakes, or forever lose the woman she loves
-* [Mio Singh](/characters/mio-singh)--a trans person whose pain awakens the ghosts of a killer
+* [Mio Singh](http://smaty.se/characters/mio-singh)--a trans person whose pain awakens the ghosts of a killer
     and her child-victims
-* [Runfrid Hildrisdotter](/characters/runfrid-hildrisdotter)--a grieving widow struggling with mental wounds, the pressure of honour, and a scheming brother-in-law intent on marrying her
-* [Vanja Hulth](/characters/vanja-hulth)--a trans person looking for themselves
+* [Runfrid Hildrisdotter](http://smaty.se/characters/runfrid-hildrisdotter)--a grieving widow struggling with mental wounds, the pressure of honour, and a scheming brother-in-law intent on marrying her
+* [Vanja Hulth](http://smaty.se/characters/vanja-hulth)--a trans person looking for themselves
 and finding a curse of damnation hidden in the sweet sound of a fiddle
 
 The two missing are the trans man Antonius who meets the gender queer Phoenix
@@ -37,6 +37,8 @@ get it under 5k, and submit it to Vitaly Magazine.
 ### Teaser
 *This is the second scene of Antonius story, 1st draft.*
 
+<blockquote>
+
 First class of the day was Swedish with Marianne. When our teacher joined us, she was trailed by someone I vaguely recognised, but certainly wasn’t part of our class.
 
 “Sorry I’m late, I was getting our new student oriented. Meet Phoenix. Phoenix just transferred into the class.” The lack of pronouns sounded awkward, but as I stared at the new student I understood why.
@@ -56,7 +58,7 @@ I tried to, but Phoenix’s startling blue gaze bore into my side. It made elect
 “Only you, but—”
 
 “Good, so you have some sense.” They flipped the book open, and I could finally focus on class.
-
+</blockquote>
 
 
 Enjoy May,
